--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" :"next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^4.21.2",
+    "bootstrap": "^5.1.3",
     "next": "^12.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
