--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^4.21.2",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "next": "^12.1.6",
     "react": "^18.2.0",
