--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "http-proxy-middleware": "^2.0.6",
     "next": "^12.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.0.5",
+    "toastify": "^2.0.1"
   }
 }
