--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^6.4.0",
     "morgan": "^1.10.0",
     "nanoid": "^3.3.4",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "query-string": "^7.1.1",
+    "stripe": "^9.11.0"
   }
 }
