--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "next": "^12.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-toastify": "^9.0.5",
     "toastify": "^2.0.1"
   }
