--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "nanoid": "^3.3.4",
     "nodemon": "^2.0.16",
     "query-string": "^7.1.1",
-    "stripe": "^8.141.0"
+    "slugify": "^1.6.5",
+    "stripe": "^8.141.0",
+    "toast": "^0.3.47"
   }
 }
