--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
+    "react-markdown": "^5.0.3",
     "react-toastify": "^9.0.5",
     "toastify": "^2.0.1"
   }
