--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
     "react-markdown": "^5.0.3",
+    "react-player": "^2.10.1",
     "react-toastify": "^9.0.5",
     "toastify": "^2.0.1"
   }
