--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stripe/stripe-js": "^1.32.0",
     "antd": "^4.21.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
